--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horror Games Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
                     required></textarea><button type="submit">Submit</button></form>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
 </body>
 
 </html>
