--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <div id="cart-content" class="cart-dropdown">
             <h2>Carrito de Compras</h2>
             <ul id="cart-items"></ul>
+            <button id="checkout-btn">Checkout</button> <!-- Añadido el botón de checkout -->
         </div>
 
         <section class="form-section">
