--- a/index.html
+++ b/index.html
@@ -25,22 +25,25 @@
         <section class="image-gallery">
             <h2>Available Games</h2>
             <div class="image-item">
-                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co7p73.webp" loading="lazy"
-                    alt="Until Dawn">
+                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co7p73.webp" 
+                     width="300" height="400" 
+                     alt="Until Dawn">
                 <h3>Until Dawn</h3>
                 <p>A survival horror adventure game where every decision you make has life or death consequences.</p>
                 <button class="add-to-cart" data-product="Until Dawn">Agregar al Carrito</button>
             </div>
             <div class="image-item">
-                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co5wkr.webp" loading="lazy"
-                    alt="Silent Hill 2">
+                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co5wkr.webp" 
+                     width="300" height="400" 
+                     alt="Silent Hill 2">
                 <h3>Silent Hill 2</h3>
                 <p>A psychological horror game that delves deep into the psyche of the protagonist.</p>
                 <button class="add-to-cart" data-product="Silent Hill 2">Agregar al Carrito</button>
             </div>
             <div class="image-item">
-                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co1yat.webp" loading="lazy"
-                    alt="Outlast">
+                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co1yat.webp" 
+                     width="300" height="400" 
+                     alt="Outlast">
                 <h3>Outlast</h3>
                 <p>A first-person survival horror game set in a derelict psychiatric hospital.</p>
                 <button class="add-to-cart" data-product="Outlast">Agregar al Carrito</button>
@@ -50,22 +53,25 @@
         <section class="image-gallery">
             <h2>More Games</h2>
             <div class="image-item">
-                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co20x8.webp" loading="lazy"
-                    alt="Outlast II">
+                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co20x8.webp" 
+                     width="300" height="400" 
+                     loading="lazy" alt="Outlast II">
                 <h3>Outlast II</h3>
                 <p>A sequel to Outlast, offering a disturbing journey into the depths of the human mind and its dark secrets.</p>
                 <button class="add-to-cart" data-product="Outlast II">Agregar al Carrito</button>
             </div>
             <div class="image-item">
-                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co2zpu.webp" loading="lazy"
-                    alt="Resident Evil">
+                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co2zpu.webp" 
+                     width="300" height="400" 
+                     loading="lazy" alt="Resident Evil">
                 <h3>Resident Evil</h3>
                 <p>The classic survival horror game that started the Resident Evil series.</p>
                 <button class="add-to-cart" data-product="Resident Evil">Agregar al Carrito</button>
             </div>
             <div class="image-item">
-                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co5zky.webp" loading="lazy"
-                    alt="Dead by Daylight">
+                <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co5zky.webp" 
+                     width="300" height="400" 
+                     loading="lazy" alt="Dead by Daylight">
                 <h3>Dead by Daylight</h3>
                 <p>An asymmetrical multiplayer horror game where one player takes on the role of the savage killer.</p>
                 <button class="add-to-cart" data-product="Dead by Daylight">Agregar al Carrito</button>
